Checkpoint 118 - cm2cb93127

--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>app-gateway2</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-      body { font-family: sans-serif; margin: 2rem; }
-      .container { max-width: 400px; margin: 3rem auto; padding: 2rem; border: 1px solid #ccc; border-radius: 7px; background: #fafafa; }
-      h1   { text-align: center; color: #333; font-size: 2rem; }
-      p    { color: #555; }
-    </style>
+  <meta charset="UTF-8">
+  <title>app-gateway2</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div class="container">
-    <h1>app-gateway2 Service</h1>
-    <p>This is a minimal web server setup.<br><br>
-       <strong>/healthz</strong> will return 200 OK when the server is up.<br>
-       You are viewing <em>app-gateway2/public/index.html</em> served by Express.
-    </p>
-    <hr>
-    <div style="text-align:center; font-size: 0.9em; color: #999;">
-      &copy; 2024 app-gateway2 Minimal Scaffold
-    </div>
-  </div>
+  <h1>app-gateway2 is running!</h1>
+  <p>If you see this page, your Express/static server is working.</p>
 </body>
 </html>
