--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>app-gateway2</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-    :root { color-scheme: light dark; }
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; padding: 2rem; line-height: 1.5; }
-    h1 { margin-top: 0; }
-    .note { color: #666; font-size: .9rem; }
-    .ok { display:inline-block; padding:.25rem .5rem; border-radius:.25rem; background:#e6ffed; color:#137333; font-weight:600; }
-    code { background: rgba(127,127,127,.12); padding: .2rem .4rem; border-radius: .25rem; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>body{font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;margin:2rem}.ok{color:#0a0}</style>
 </head>
 <body>
   <h1>app-gateway2</h1>
-  <p class="ok">Server is running.</p>
-  <p>This is a minimal index page served from <code>public/index.html</code>.</p>
-  <ul>
-    <li>Health check: <a href="/health">/health</a></li>
-  </ul>
-  <p class="note">The server listens on the port defined by the <code>PORT</code> environment variable (defaults to 3000).</p>
+  <p class="ok">Service is running. Health endpoint: <code>/health</code></p>
 </body>
 </html>
